--- a/package.json
+++ b/package.json
@@ -22,5 +22,24 @@
   "bugs": {
     "url": "https://github.com/alayek/Angular-Skeleton/issues"
   },
-  "homepage": "https://github.com/alayek/Angular-Skeleton#readme"
+  "homepage": "https://github.com/alayek/Angular-Skeleton#readme",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-nodeunit": "^0.4.1",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-exec": "^0.4.6",
+    "grunt-jsdoc": "^0.6.6",
+    "grunt-karma": "^0.10.1",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.12.33",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.1.4"
+  },
+  "scripts": {
+    "postinstall" : "bower install"
+  }
 }
