--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "karma-phantomjs-launcher": "^0.1.4"
   },
   "scripts": {
-    "postinstall" : "bower install"
+    "postinstall" : "bower install",
+    "test" : "build"
   }
 }
